--- a/www/index.html
+++ b/www/index.html
@@ -23,11 +23,11 @@
     <link rel="stylesheet" href="/styles.css" />
 
     <!-- TODO: Add your name to enter the prize draw -->
-    <!-- <meta name="author" content="YOUR NAME"> -->
+    <meta name="author" content="Ava Browne">
 
     <!-- TODO: Add your email and we'll show an avatar in the leaderboard. (And
     you'll get more points!) -->
-    <!-- <meta name="email" content="YOUR EMAIL ADDRESS"> -->
+    <meta name="email" content="scdavis41+test_01@gmail.com">
   </head>
 
   <body>
