--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="/styles.css" />
 
     <!-- TODO: Add your name to enter the prize draw -->
-    <meta name="author" content="Noah Davis">
+    <meta name="author" content="Jeremy Davis">
 
     <!-- TODO: Add your email and we'll show an avatar in the leaderboard. (And
     you'll get more points!) -->
